--- a/TicTacToe_Server/pom.xml
+++ b/TicTacToe_Server/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.baileycostello</groupId>
+    <groupId>com.tictactoe_server</groupId>
     <artifactId>TicTacToe_Server</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
@@ -53,7 +53,7 @@
                     <excludes>
                         <exclude>**/rescoures</exclude>
                     </excludes>
-                    <mainClass>com.baileycostello.tictactoe_server.App</mainClass>
+                    <mainClass>com.tictactoe_server.app</mainClass>
                 </configuration>
                 <executions>
                     <execution>
